--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,8 @@ dependencies:
   video_player: ^2.4.10
   flutter_icons: ^1.1.0
   google_fonts: ^3.0.1
+  flick_video_player: ^0.5.0
+  provider: ^6.0.5
 
 dev_dependencies:
   flutter_test:
