--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   video_player: ^2.4.10
   flutter_icons: ^1.1.0
   google_fonts: ^3.0.1
+  lottie: ^1.4.2
   flick_video_player: ^0.5.0
   provider: ^6.0.5
 
@@ -51,6 +52,9 @@ flutter:
   assets:
     - assets/images/
     - assets/videos/
+
+    - assets/animations/
+    
   #   - images/a_dot_ham.jpeg
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
