--- a/android/.gitignore
+++ b/android/.gitignore
@@ -11,3 +11,4 @@ GeneratedPluginRegistrant.java
 key.properties
 **/*.keystore
 **/*.jks
+# The .vscode folder contains launch configuration for Visual Studio CODE
